fix: isolate conflicting styles for content alignment

--- a/src/views/components/GamePageList/GamePageList.module.scss
+++ b/src/views/components/GamePageList/GamePageList.module.scss
@@ -1,6 +1,8 @@
 @use "src/palette";
 
 .GamePageList {
+	padding: 10vh 5vw;
+
 	.CountFilter {
 		display: grid;
 		grid-template-areas:
